--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
       <script type="module" src="../app.js"></script>
     
-    <title>Document</title>
+    <title>Bi-Process</title>
 </head>
 <body>
     
