--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,8 +9,9 @@
     <title>Bi-Process</title>
 </head>
 <body>
+  <main class="page-wrapper">
     
-<div id="app"></div>
-    
+    <div id="app"></div>
+  </main>
 </body>
 </html>
